WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29686
Crash when website does a history.back() followed by an alert()
https://bugs.webkit.org/show_bug.cgi?id=29686
Summary
Crash when website does a history.back() followed by an alert()
Darin Adler
Reported
2009-09-23 09:38:32 PDT
Steps to reproduce: - go to
http://www.astro.ucla.edu/~ghez/
- at the bottom of the page, click on the link for "Gaspard Duchene" - after dismissing the alert, Safari crashes I have a fix in the works.
Attachments
patch
(15.07 KB, patch)
2009-09-23 15:33 PDT
,
Darin Adler
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-09-23 15:33:19 PDT
Created
attachment 40022
[details]
patch
Darin Adler
Comment 2
2009-09-23 16:27:26 PDT
http://trac.webkit.org/changeset/48687
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug